--- a/pyvshadow-python2/Makefile.am
+++ b/pyvshadow-python2/Makefile.am
@@ -70,8 +70,8 @@ MAINTAINERCLEANFILES = \
 	Makefile.in
 
 clean-local:
-	/bin/rm -f pyvshadow*.[ch]
+	-rm -f pyvshadow*.[ch]
 
 distclean: clean
-	/bin/rm -f Makefile
+	-rm -f Makefile
 
