--- a/configure.ac
+++ b/configure.ac
@@ -2,13 +2,14 @@ AC_PREREQ([2.71])
 
 AC_INIT(
  [libvshadow],
- [20231014],
+ [20231116],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
  [include/libvshadow.h.in])
 
 AM_INIT_AUTOMAKE([gnu 1.6 tar-ustar])
+AM_EXTRA_RECURSIVE_TARGETS([sources splint])
 
 AC_CONFIG_MACRO_DIR([m4])
 
