--- a/vshadowtools/Makefile.am
+++ b/vshadowtools/Makefile.am
@@ -137,9 +137,9 @@ MAINTAINERCLEANFILES = \
 	Makefile.in
 
 distclean: clean
-	/bin/rm -f Makefile
+	-rm -f Makefile
 
-splint:
+splint-local:
 	@echo "Running splint on vshadowinfo ..."
 	-splint -preproc -redef $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(vshadowinfo_SOURCES)
 	@echo "Running splint on vshadowmount ..."
