Applied updates and changes for deployment

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ([2.71])
 
 AC_INIT(
  [libvshadow],
- [20231116],
+ [20231128],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -110,7 +110,7 @@ dnl Check if libvshadow Python bindings (pyvshadow) required headers and functio
 AX_PYTHON_CHECK_ENABLE
 
 AS_IF(
-  [test "x${ac_cv_enable_python}" != xno || test "x${ac_cv_enable_python2}" != xno || test "x${ac_cv_enable_python3}" != xno],
+  [test "x${ac_cv_enable_python}" != xno],
   [dnl Headers included in pyvshadow/pyvshadow_error.c
   AC_CHECK_HEADERS([stdarg.h varargs.h])
 
@@ -181,8 +181,6 @@ AC_CONFIG_FILES([libfdatetime/Makefile])
 AC_CONFIG_FILES([libfguid/Makefile])
 AC_CONFIG_FILES([libvshadow/Makefile])
 AC_CONFIG_FILES([pyvshadow/Makefile])
-AC_CONFIG_FILES([pyvshadow-python2/Makefile])
-AC_CONFIG_FILES([pyvshadow-python3/Makefile])
 AC_CONFIG_FILES([vshadowtools/Makefile])
 AC_CONFIG_FILES([po/Makefile.in])
 AC_CONFIG_FILES([po/Makevars])
