--- a/libvshadow.spec.in
+++ b/libvshadow.spec.in
@@ -32,7 +32,7 @@ Header files and libraries for developing applications for libvshadow.
 Summary: Python 3 bindings for libvshadow
 Group: System Environment/Libraries
 Requires: libvshadow = %{version}-%{release} python3
-BuildRequires: python3-devel
+BuildRequires: python3-devel python3-setuptools
 
 %description -n libvshadow-python3
 Python 3 bindings for libvshadow
@@ -50,7 +50,7 @@ Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
 %setup -q
 
 %build
-%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python3
+%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python
 make %{?_smp_mflags}
 
 %install
