--- a/libvshadow/Makefile.am
+++ b/libvshadow/Makefile.am
@@ -1,6 +1,6 @@
 AM_CPPFLAGS = \
-	-I$(top_srcdir)/include \
-	-I$(top_srcdir)/common \
+	-I../include -I$(top_srcdir)/include \
+	-I../common -I$(top_srcdir)/common \
 	@LIBCERROR_CPPFLAGS@ \
 	@LIBCTHREADS_CPPFLAGS@ \
 	@LIBCDATA_CPPFLAGS@ \
@@ -75,13 +75,11 @@ EXTRA_DIST = \
 	libvshadow.rc \
 	libvshadow.rc.in
 
-MAINTAINERCLEANFILES = \
+DISTCLEANFILES = \
+	libvshadow_definitions.h \
+	libvshadow.rc \
+	Makefile \
 	Makefile.in
-
-distclean: clean
-	-rm -f libvshadow_definitions.h
-	-rm -f libvshadow.rc
-	-rm -f Makefile
 
 sources-local: $(BUILT_SOURCES)
 
