Changes for cygfuse, fuse3 and Dokan support

--- a/libvshadow.ini
+++ b/libvshadow.ini
@@ -15,6 +15,10 @@ build_dependencies: ["fuse"]
 description: "Several tools for reading Windows NT Volume Shadow Snapshots (VSS)"
 names: ["vshadowdebug", "vshadowinfo", "vshadowmount"]
 
+[info_tool]
+source_description: "a Windows NT Volume Shadow Snapshot (VSS) volume"
+source_type: "volume"
+
 [mount_tool]
 features: ["offset"]
 base_type: "volume"
